--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -46,6 +46,11 @@
   margin-bottom: 20px;
 }
 
+.imgdiv2 img,
+.imgdiv3 img {
+  width: 500px;
+}
+
 @media screen and (max-width: 900px) {
   .expt-01,
   .expt-02,
@@ -53,7 +58,12 @@
     margin-left: 50px;
     display: flex;
     flex-direction: column;
-
     align-items: center;
+  }
+
+  .imgdiv2 img,
+  .imgdiv3 img,
+  img {
+    width: 400px;
   }
 }
